# scraping-fundamentus

./: pyproject.toml
src/: collect.py  fundamentus_scraping.py  main.py  transform.py  utils.py
src/scrapers/: rendimentos_acoes.py  tables.py
tests/: test_parse_string_to_float.py
